# argus

./: .gitignore  CNAME  CODE_OF_CONDUCT.md  README.md
ability-temp/leafletjs/: MBTilesShow.html  leafletTemp.html
argus-src/: .env.development  .env.production  .eslintrc.cjs  .gitignore  README.md  components.d.ts  env.d.ts  index.html  obstacle.md  package-lock.json  package.json  tailwind.config.js  tauri.md  todo.md  trap.md  vite.config.ts  vitest.config.ts
argus-src/doc/: WPF.md  diesel.md  rust.md  tauri.md  todo.md  trap.md  typescript.md  vs.md
argus-src/html/: ie.html
argus-src/src/: App.vue  AppStatus.ts  command.ts  errors.ts  main.ts
argus-src/src-python-v1/: app.py
argus-src/src-python-v1/app/: __init__.py
argus-src/src-python-v1/image_processing/: __init__.py  arc_face_use.py  yolo_use.py
argus-src/src-python/app/: __init__.py
argus-src/src-python/image_processing/: __init__.py
argus-src/src-tauri/: .env  .gitignore  2  Cargo.toml  diesel.toml  tauri.conf.json
argus-src/src-tauri/capabilities/: default.json
argus-src/src-tauri/db/: sqlite.db
argus-src/src-tauri/migrations/2024-12-04-140225_create_posts/: up.sql
argus-src/src-tauri/migrations/2024-12-12-084729_databases_init/: down.sql  up.sql
argus-src/src-tauri/migrations/2025-01-10-073245_create_photo_table/: down.sql  up.sql
argus-src/src-tauri/migrations/2025-01-11-090517_photo_table_add_info_field/: up.sql
argus-src/src-tauri/migrations/2025-06-04-032713_databases_init/: down.sql  up.sql
argus-src/src-tauri/sql/: init.sql
argus-src/src-tauri/src/: bg_services.rs  computed_value.rs  conf.rs  constant.rs  errors.rs  global_front_emit.rs  global_task_manager.rs  http_client.rs  lib.rs  main.rs
argus-src/src-tauri/src/api/: example.rs  mod.rs
argus-src/src-tauri/src/commands/: command.rs  emit_test.rs  file_command.rs  folder_show_command.rs  global_task_command.rs  image_command.rs  log_command.rs  mod.rs  photo_storage_command.rs  post_command.rs
argus-src/src-tauri/src/constants/: app_config.rs  mod.rs
argus-src/src-tauri/src/explore/: asynchronous.rs  macro_rules_use.rs  mod.rs
argus-src/src-tauri/src/infra/: conf.rs  config.rs  config2.rs  global_error_msg.rs  image_size.rs  mod.rs
argus-src/src-tauri/src/infra/runtime/: bg_services.rs  global_task_manager.rs  mod.rs
argus-src/src-tauri/src/models/: base_model.rs  basic_setting.rs  db_version.rs  mod.rs  photo.rs  photo_storage.rs  post.rs
argus-src/src-tauri/src/net_connection/: http_client.rs  http_service.rs  mod.rs  service.rs  ws_handler.rs  ws_operate.rs  ws_service.rs
argus-src/src-tauri/src/server/: example.rs
argus-src/src-tauri/src/services/: basic_service.rs  mod.rs  photo_photo_service.rs  post_service.rs
argus-src/src-tauri/src/storage/: basic_setting.rs  connection.rs  mod.rs  photo_storage.rs  photo_table.rs  post.rs  schema.rs
argus-src/src-tauri/src/storage/photo/: model.rs  repository.rs  service.rs
argus-src/src-tauri/src/storage/photo_storage/: model.rs  repository.rs
argus-src/src-tauri/src/structs/: config.rs  global_error_msg.rs  image_size.rs  mod.rs
argus-src/src-tauri/src/utils/: base64_util.rs  compressed_util.rs  computed_value.rs  db_init_util.rs  db_migration_util.rs  env_util.rs  file_hash_util.rs  file_util.rs  hash_util.rs  image_format_util.rs  img_util.rs  json_util.rs  mod.rs  system_state_util.rs  task_util.rs  time_util.rs  tuples.rs
argus-src/src-tauri/src/utils/exif_utils/: exif_util.rs  gps_util.rs  mod.rs  tag.rs  value.rs
argus-src/src-tauri/src/websocket/: client_manger.rs  mod.rs
argus-src/src/assets/: config.template.js
argus-src/src/components/: ImageGallery.vue  LazyImage.vue
argus-src/src/constants/: app.ts  command.ts  constants.ts  emitOrder.ts  enums.ts
argus-src/src/directives/: lazyLoad.ts
argus-src/src/models/: ImageShowInfo.ts  globalErrorMsg.ts
argus-src/src/router/: index.ts  setting.ts
argus-src/src/routers/: index.ts
argus-src/src/services/: base.ts  fileService.ts  folderService.ts  globalService.ts  imageService.ts  imgService.ts  libraryService.ts  logService.ts  storageService.ts
argus-src/src/types/: basicSetting.type.ts  command.type.ts  emit.type.ts  image.type.ts  photoStorage.type.ts  utils.ts
argus-src/src/utils/: arrayUtils.ts  commandUtil.ts  darkUtil.ts  fileUtil.ts  imageCacheManager.ts  imageInfoCacheManager.ts  loremGenerate.ts  nameUtil.ts  pathUtils.ts  radomUtils.ts  stringUtils.ts
argus-src/src/views/: AboutView.vue  Dockerfile  FolderView.vue  HomeView.vue  ImageInfoPreview.vue  ImagePreview.vue  ImagePreviewShow.vue  ImagePreviewV2.vue  LibraryView.vue  NotFound.vue  SettingView.vue
front/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  front.sln
front/Common/: Common.csproj
front/Common/ExpandException/: ExceptionEnum.cs  ExpandException.cs
front/Common/Utils/: FileTypeChecker.cs  JsonUtils.cs  TimeUtils.cs
front/Framework/: App.xaml  App.xaml.cs  Framework.csproj  Framework.sln  MainWindow.xaml  MainWindow.xaml.cs
front/Framework/Controls/: Window.cs
front/Framework/Tools/: ImgUtils.cs  UIElementExtension.cs
front/Framework/Views/: MainView.xaml  MainView.xaml.cs
front/Repository/: Repository.csproj  Repository.sln
front/Repository/Contexts/: PhotoStoragePathHelper.cs
front/Repository/Entity/: BaseModel.cs  PhotoStoragePath.cs
front/Repository/Servers/: PhotoStoragePathServer.cs
front/UI/: App.xaml  App.xaml.cs  UI.csproj  UI.sln
front/UI/Constants/: ConstUI.cs
front/UI/Htmls/: Index.html
front/UI/Model/: TabItem.cs
front/UI/Styles/: TextBlockStyle.xaml  Window.xaml
front/UI/ViewModels/: MainViewModel.cs  MapViewModel.cs  NotBuildViewModel.cs  SearchViewModel.cs  SettingViewModel.cs  ZipperViewModel.cs
front/UI/Views/: HomeView.xaml  HomeView.xaml.cs  MainView.xaml  MainView.xaml.cs  MapView.xaml  MapView.xaml.cs  NotBuildView.xaml  NotBuildView.xaml.cs  SearchView.xaml  SearchView.xaml.cs  SettingView.xaml  SettingView.xaml.cs  ZipperView.xaml  ZipperView.xaml.cs
rp/tauri-sqlite-main/: package-lock.json  vite.config.ts
(+84 files in other folders)
