[package]
name = "argus-src"
version = "0.0.1"
description = "A Tauri App"
authors = ["yuanll"]
edition = "2021"

[profile.release]
debug = true
panic = "abort"

# 查看更多键及其定义： https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# `_lib` 后缀可能看起来多余，但它是必要的`
# 使 lib 名称唯一并且不会与 bin 名称冲突.
# 这似乎只是 Windows 上的问题，请参阅 https://github.com/rust-lang/cargo/issues/8519
name = "argus_src_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell  = "2"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
tauri-plugin-fs     = "2"
tauri-plugin-dialog = "2.0.3"
base64              = "0.22.1"
tauri-plugin-sql    = { version = "2", features = ["sqlite"] }
rusqlite            = "0.32.1"
once_cell           = "1.20.2"
diesel              = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
# 作为构建过程的一部分构建 libpq 和 openssl
# 如果遇到设置问题，请取消注释这些行
# pq-sys            = { version = "0.6", features = ["bundled"] }
# openssl-sys       = { version = "0.9.100", features = ["vendored"] }
dotenvy             = "0.15"
tauri-plugin-log    = "2"
log                 = "0.4"
diesel_migrations   = "2.2.0"

#cargo add reqwest
